# zkai

./: .gitignore  README.md  RUNBOOK.md  architecture.drawio  architecture.md  install.sh
.github/workflows/: release.yml
bridge/: package-lock.json  package.json  providers.json  tsconfig.json
bridge/src/: contracts.ts  register-provider.ts  server.ts  wallet.ts
bridge/src/routes/: attestation.ts  payment.ts  registry.ts
cli/: README.md  pyproject.toml
cli/zkai_cli/: __init__.py  __main__.py  docker.py  keys.py  main.py  register.py  setup.py  util.py
codex/: system.md
codex/prompts/: architecture-doc.md  frontend-readme.md  generate-all-docs.md  root-readme.md  sdk-readme.md
contracts/src/: AttestationRegistry.compact  PaymentEscrow.compact  PaymentEscrow.sol  ProviderRegistry.compact  ProviderRegistry.sol
deploy/: deployment.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
deploy/abis/: AttestationRegistry.json  PaymentEscrow.json  ProviderRegistry.json
deploy/artifacts/contracts/AttestationRegistry.sol/: AttestationRegistry.json
deploy/artifacts/contracts/PaymentEscrow.sol/: PaymentEscrow.json
deploy/artifacts/contracts/ProviderRegistry.sol/: ProviderRegistry.dbg.json  ProviderRegistry.json
deploy/cache/: solidity-files-cache.json
deploy/compiled/AttestationRegistry/compiler/: contract-info.json
deploy/compiled/AttestationRegistry/contract/: index.d.ts  index.js  index.js.map
deploy/compiled/AttestationRegistry/keys/: approveModel.prover  approveModel.verifier  postAttestation.prover  postAttestation.verifier  revokeModel.prover  revokeModel.verifier
deploy/compiled/AttestationRegistry/zkir/: approveModel.bzkir  approveModel.zkir  postAttestation.bzkir  postAttestation.zkir  revokeModel.bzkir  revokeModel.zkir
deploy/compiled/PaymentEscrow/compiler/: contract-info.json
deploy/compiled/PaymentEscrow/contract/: index.js  index.js.map
deploy/compiled/PaymentEscrow/keys/: withdraw.prover  (+1 more)
deploy/contracts/: AttestationRegistry.sol
deploy/scripts/: deploy.ts
deploy/src/: deploy.ts  redeploy-escrow.ts
deploy/typechain-types/: AttestationRegistry.ts  PaymentEscrow.ts  ProviderRegistry.ts  hardhat.d.ts  index.ts
deploy/typechain-types/factories/: AttestationRegistry__factory.ts  PaymentEscrow__factory.ts  ProviderRegistry__factory.ts  index.ts
docs/: openrouter-frontend-get-endpoints.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/deck/: page.tsx
frontend/app/model/: page.tsx
frontend/app/provider_dashboard/: page.tsx
frontend/components/: animated-tetrahedron.tsx  animated-wave.tsx  cta-section.tsx  demo.tsx  features-section.tsx  footer-section.tsx  hero-blend-strip.tsx  how-it-works-section.tsx  integrations-section.tsx  navigation.tsx  security-section.tsx  spline-hero.tsx
frontend/components/models/: model-detail-view.tsx  models-content.tsx
frontend/components/ui/: button.tsx  faq-accordion.tsx  gradient-borders-button.tsx  gradient-card-showcase.tsx  rainbow-borders-button.tsx  scroll-progress.tsx  user-flow.tsx
frontend/lib/: contracts.ts  db.ts  escrow.ts  indexer.ts  wallet.ts  ws-browser-shim.js
frontend/lib/data/: model-fetchers.ts
frontend/lib/types/: model-detail.ts  model.ts
provider/: .provider_id  Dockerfile  README.md  docker-compose.yml  llama.manifest.template
provider/api/: enclave.py  main.py  requirements.txt  ws_relay_client.py
provider/scripts/: start.sh
relay/: Dockerfile  fly.toml  index.js  package-lock.json  package.json
scripts/: build-release.sh
sdk/: README.md  pyproject.toml
sdk/zkai/: __init__.py  attestation.py  bridge.py  client.py  crypto.py  langchain.py  payment.py  provider.py
sdk/zkai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wallet/: keygen.mjs  package-lock.json  package.json  wallet.txt
(+53 files in other folders)
